--- a/background.html
+++ b/background.html
@@ -14,9 +14,18 @@ if( ! localStorage['lang'])
 		localStorage['lang'] = "ru";
 	else
 		localStorage['lang'] = "en";
-
 }
 
+
+chrome.extension.onRequest.addListener(
+	function(request, sender, sendResponse) {
+		if (sender.tab.url == "chrome-extension://" + chrome.i18n.getMessage("@@extension_id") + "/options.html" && request.do == "update")
+		{
+			init();
+			console.log('Update refresh time from options !');
+		}
+	}
+);
 
 init();
 
