save link, share with facebook

--- a/background.html
+++ b/background.html
@@ -5,12 +5,13 @@
 <script src="functions.js"></script>
 <script>
 
+var version = 1.4;
 //Поставить дефолтные значения при первом запуске
-if( ! localStorage['refresh'])
+if ( ! localStorage['refresh'])
 {
 	localStorage['refresh'] = 30;
 }
-if( ! localStorage['lang'])
+if ( ! localStorage['lang'])
 {
 	//Получаем язык, используемый в браузере
 	var lang = chrome.i18n.getMessage("@@ui_locale");
@@ -19,9 +20,17 @@ if( ! localStorage['lang'])
 	else
 		localStorage['lang'] = "en";
 }
-get_db().transaction(function(tx) {
-	tx.executeSql("CREATE TABLE quotes (text TEXT, author TEXT, timestamp REAL)", [], null);
-});
+if ( ! localStorage['version'] || localStorage['version'] != version)
+{
+	if ( ! localStorage['version'])
+	{
+		get_db().transaction(function(tx) {
+			tx.executeSql('DROP TABLE IF EXISTS quotes');
+			tx.executeSql("CREATE TABLE quotes (text TEXT, author TEXT, link TEXT, timestamp REAL)", [], null);
+		});
+	}
+	localStorage['version'] = version;
+}
 
 //Добавляем listener, для вызова со страницы опций, чтобы обновить время обновления цитат
 chrome.extension.onRequest.addListener(
