--- a/popup.html
+++ b/popup.html
@@ -17,10 +17,15 @@
 get_db().transaction(function(tx) {
 	tx.executeSql("SELECT * FROM quotes ORDER BY rowid DESC LIMIT 4", [], function(tx, result) {
 		for(var i = 0; i < result.rows.length; i++) {
-			link = result.rows.item(i)['link'];
-			textToSocial = (result.rows.item(i)['author'] ? result.rows.item(i)['author'] + ": " : '') + result.rows.item(i)['text'];
-			social = ' <a target="_blank" title="' + chrome.i18n.getMessage('writeInVkontakte') + '" href="http://vkontakte.ru/share.php?url=' + link + '&title=' + textToSocial + '"><img src="http://vkontakte.ru/images/faviconnew.ico" alt="Vkontakte" /></a> <a target="_blank" title="' + chrome.i18n.getMessage('writeInTwitter') + '" href="http://twitter.com/home?status=' + textToSocial + '"><img src="https://twitter.com/phoenix/favicon.ico" alt="Twitter" /></a> <a target="_blank" title="Написать в фейсбуке" href="http://www.facebook.com/sharer.php?u=' + encodeURIComponent(link) + '&t=' + encodeURIComponent(textToSocial) + '"><img src="http://static.ak.fbcdn.net/rsrc.php/yi/r/q9U99v3_saj.ico" alt="Facebook" /></a>';
-			text = '';
+			var link = result.rows.item(i)['link'];
+			var textToSocial = (result.rows.item(i)['author'] ? result.rows.item(i)['author'] + ": " : '') + result.rows.item(i)['text'];
+			var twitterText = textToSocial;
+			if (twitterText.length > 140)
+			{
+				twitterText = twitterText.substring(0, 140 - link.length - 1) + '…' + link;
+			}
+			var social = ' <a target="_blank" title="' + chrome.i18n.getMessage('writeInVkontakte') + '" href="http://vkontakte.ru/share.php?url=' + link + '&title=' + textToSocial + '"><img src="http://vkontakte.ru/images/faviconnew.ico" alt="Vkontakte" /></a> <a target="_blank" title="' + chrome.i18n.getMessage('writeInTwitter') + '" href="http://twitter.com/home?status=' + encodeURIComponent(twitterText) + '"><img src="https://twitter.com/phoenix/favicon.ico" alt="Twitter" /></a> <a target="_blank" title="' + chrome.i18n.getMessage('writeInFacebook') + '" href="http://www.facebook.com/sharer.php?u=' + encodeURIComponent(link) + '&t=' + encodeURIComponent(textToSocial) + '"><img src="http://static.ak.fbcdn.net/rsrc.php/yi/r/q9U99v3_saj.ico" alt="Facebook" /></a>';
+			var text = '';
 			text += result.rows.item(i)['author'] ? '<b>' + result.rows.item(i)['author'] + '</b><br/>' : '';
 			text += result.rows.item(i)['text'];
 			text += (i != result.rows.length-1) ?
