--- a/options.html
+++ b/options.html
@@ -3,48 +3,11 @@
 <head>
 	<meta charset=utf-8 />
 	<title>Options</title>
-	<script src="functions.js"></script>
-	<script type="text/javascript">
-
-//Сохраняем опции
-function save_options()
-{
-	localStorage['lang'] = document.getElementById("lang").value;
-	localStorage['refresh'] = parseFloat(document.getElementById("refresh").value);
-
-	//Показываем пользователю, что настройки сохранены
-	var status = document.getElementById("status");
-	status.innerHTML = chrome.i18n.getMessage("options_saved");
-	setTimeout(function() {
-		status.innerHTML = "";
-	}, 1750);
-
-	//Посылаем запрос на background.html
-	chrome.extension.sendRequest({do: "update"});
-}
-
-//Восстанавливаем значения из localStorage
-function restore_options()
-{
-	//Выставляем язык
-	document.getElementById("locale_refresh").innerHTML = chrome.i18n.getMessage("refresh");
-	document.getElementById("locale_minutes").innerHTML = chrome.i18n.getMessage("minutes");
-	document.getElementById("locale_language").innerHTML = chrome.i18n.getMessage("language");
-	document.getElementById("locale_save").value = chrome.i18n.getMessage("save");
-	document.title = chrome.i18n.getMessage("options");
-
-	//Выставляем значения
-	//Можно поставить:
-	//document.getElementById("lang").value = localStorage["lang"] == undefined ? 'en' : localStorage["lang"];
-	//Но в background.html уже выставлены значения по-умолчанию
-	document.getElementById("lang").value = localStorage["lang"];
-	document.getElementById("refresh").value = localStorage["refresh"];
-}
-	</script>
+	<script src="js/functions.js"></script>
+	<script src="js/options.js"></script>
 </head>
-
-<body onload="restore_options()">
-<form action="" onsubmit="save_options();return false;">
+<body>
+<form id="form" action="">
 <span id="locale_refresh">Time refresh</span>: <input name="refresh" id="refresh" size="1" /> <span id="locale_minutes">in minutes</span> <br/>
 <span id="locale_language">Language</span>:
 	<select name="lang" id="lang">
