grayscale social images

--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
 	<title>Popup</title>
 	<script src="js/functions.js"></script>
 	<script src="js/popup.js"></script>
+  <link href="css/popup.css" rel="stylesheet" media="all" />
 </head>
 <body id="body" style="width:400px;">
 </body>
