--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,6 @@
 	<script src="js/popup.js"></script>
   <link href="css/popup.css" rel="stylesheet" media="all" />
 </head>
-<body id="body" style="width:400px;">
+<body id="body" style="width:400px;" tabindex="1">
 </body>
 </html>
