--- a/background.html
+++ b/background.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
+<script src="js/ga.js"></script>
 <script src="js/functions.js"></script>
 <script src="js/background.js"></script>
 </head>
