--- a/options.html
+++ b/options.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset=utf-8 />
 	<title>Options</title>
+  <script src="js/ga.js"></script>
 	<script src="js/functions.js"></script>
 	<script src="js/options.js"></script>
 </head>
