--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset=utf-8 />
 	<title>Popup</title>
+  <script src="js/ga.js"></script>
 	<script src="js/functions.js"></script>
 	<script src="js/popup.js"></script>
   <link href="css/popup.css" rel="stylesheet" media="all" />
